--- a/eas.json
+++ b/eas.json
@@ -1,5 +1,10 @@
 {
   "build": {
+    "apk": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "preview": {
       "android": {
         "buildType": "apk"
